# ssi-consentcast

./: README.md  credential.json  flow  public_key  setup.sh  vc_input.json
bank-vc-issuer/: app.py  credential.json  public_key  vc_input.json
bank-vc-issuer/app/: Cargo.toml
bank-vc-issuer/app/src/: main.rs
consentcast/: Cargo.toml
consentcast/src/: auditor.rs  cli.rs  consent_logs.json  logger.rs  main.rs  private.key  public.key  signature.sig  signer.rs  txt.txt
ssi_wallet/: Cargo.toml  credential.json  test_vc.json  vc
ssi_wallet/src/: credential.rs  lib.rs
verifier_cli/: Cargo.toml  verifier_portal.py
verifier_cli/src/: main.rs  public_key.json
wallet/: Cargo.toml  test_vc.json  vc
wallet/src/: main.rs  main.rs.bak  wallet.rs
