[package]
name = "consentcast"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
ed25519-dalek = "2.1.1"
getrandom = "0.3.2"
hex = "0.4.3"
rand = "0.9.0"
rand_core = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
signature = "2.2.0"
