[package]
name = "verifier_cli"
version = "0.1.0"
edition = "2024"

[dependencies]

ssi_wallet = { path = "../ssi_wallet" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
sha2 = "0.10"
hyper = "1.6.0"
bbs = "0.4"
reqwest = { version = "0.12.15", features = ["json"] }
