[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
bbs = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
ssi_wallet = { path = "../ssi_wallet" }
clap = { version = "4.5.36", features = ["derive"] }
# Web server
axum = { version = "0.7", features = ["http1"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"
base64 = "0.22.1"
